Pruebas y entrenamiento con más ejemplos

--- a/ProyectoFinal/AnálisisPersuasivo/clasificador-test.ipynb
+++ b/ProyectoFinal/AnálisisPersuasivo/clasificador-test.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import torch\n",
@@ -20,7 +22,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# Número de GPUs disponibles. Usar 0 para modo CPU.\n",
@@ -33,7 +37,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -55,7 +61,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -80,7 +88,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -108,7 +118,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -136,7 +148,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "BOS = '<BOS>'\n",
@@ -151,7 +165,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "def unk_w_to_ix(w):\n",
@@ -164,7 +180,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -194,7 +212,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "X = [np.asarray(x, dtype=np.long) for x in X]"
@@ -203,7 +223,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "def np_to_long_tensor(list_of_lists):\n",
@@ -216,7 +238,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -238,7 +262,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "class PersuasionLSTM(nn.Module):\n",
@@ -264,7 +290,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# Dimensiones de la red neuronal\n",
@@ -277,7 +305,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -303,7 +333,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -324,86 +356,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
+   "execution_count": 22,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "def print_ix_sentence(sentence):\n",
     "    print(' '.join(ix_to_w[ix] for ix in sentence.data))\n",
     "\n",
     "def print_ix_cat(probs):\n",
-    "    print('\\t'.join(ix_to_cat))\n",
-    "    print('\\t'.join([f'{p_i.item():0.3f}' for p_i in probs.data]))"
+    "    categorias = []\n",
+    "    print('Categorías inferidas: ', end='')\n",
+    "    for i, p_i in enumerate(probs.data):\n",
+    "        if p_i.item() > 0.55:\n",
+    "            categorias.append(ix_to_cat[i])\n",
+    "    if len(categorias) == 0:\n",
+    "        print('NA')\n",
+    "    else:\n",
+    "        print(', '.join(categorias))\n",
+    "#     print('Probabilidades')\n",
+    "#     print('\\t'.join(ix_to_cat))\n",
+    "#     print('\\t'.join([f'{p_i.item():0.3f}' for p_i in probs.data]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. **Construcción del emisor/candidato (C1):** el candidato se coloca como referente principal del acto discursivo para exaltar sus cualidades personales y erigirse, a los ojos de sus interlocutores, como un líder en quien es adecuado confiar para el desarrollo de acciones de gobierno a favor de la sociedad; esto lo lleva a cabo mediante realizaciones léxicas de la primera persona, en singular o plural, y formas flexivas de verbos y posesivos para referirse a sí mismo, ya sea como individuo o como miembro de una colectividad. Para el caso de la campaña presidencial que nos ocupa, las cualidades del candidato emitidas por un tercero en el marco de una tarea proselitista, quedarán incluidas en esta categoría, ya que contribuyen a construir la imagen positiva del contendiente.\n",
+    "\n",
+    "2. **Promesa de campaña (C2):** a través de piezas discursivas, orales o escritas, el candidato oferta, destaca o compromete acciones que proyecta convertir en políticas públicas a favor de la población, si obtiene el triunfo en las urnas, con lo que implícitamente solicita el voto ciudadano que lo llevaría al poder.\n",
+    "\n",
+    "3. **Construcción del adversario (E1):** el mensaje es dirigido a su contraparte en la contienda electoral y está construido a manera de réplica y puede usar diferentes figuras retóricas (metáfora, ironía, metonimia) para conformar en el receptor una imagen determinada del adversario, que esencialmente tiene finalidad de descrédito.\n",
+    "\n",
+    "4. **Exageración de la información (E2):** se destacan los datos favorables a los fines persuasivos, con el objetivo de crear una idea positiva en la mente del receptor referente al tema del que se habla, o incluso negativa respecto de información relativa al adversario; el persuasor desfigura el sentido original del acontecimiento, nos dice Roiz (1994), mediante códigos diferentes: humorístico, burlesco, cínico, entre otros.\n",
+    "\n",
+    "5. **Recurso retórico (E3):** son variables basadas en figuras retóricas (metáfora, ironía, hipérbole, personificación, pleonasmo, perífrasis) que pueden fortalecer el efecto persuasivo, de acuerdo con Reardon (1991).\n",
+    "\n",
+    "6. **Apelación al miedo (E4):** el candidato emite mensajes dentro de su alocución que pretenden provocar sentimientos de aprensión, desasosiego o preocupación con respecto al adversario o a sus propuestas. \n",
+    "\n",
+    "7. **Llamado al voto (V1):** el emisor del mensaje hace una invitación directa al ciudadano para que apoye su proyecto político el día de la elección al depositar el sufragio a su favor.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": 27,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "==================================================\n",
       "Informa AMLO que mañana se reunirá con maestros , padres de familia y comunidades indígenas en Guelatao , Oaxaca .\n",
-      "C1\tC2\tE1\tE2\tE3\tE4\tV1\n",
-      "0.704\t0.938\t0.000\t0.018\t0.000\t0.000\t0.000\n",
       "\n",
+      "Categorías inferidas: C1, C2\n",
+      "==================================================\n",
+      "\n",
+      "==================================================\n",
       "Explicó que seguirá el ejemplo de los mejores presidentes de México : Benito Juárez , Francisco I.\n",
-      "C1\tC2\tE1\tE2\tE3\tE4\tV1\n",
-      "0.088\t0.249\t0.019\t0.034\t0.007\t0.000\t0.797\n",
       "\n",
+      "Categorías inferidas: C1, C2\n",
+      "==================================================\n",
+      "\n",
+      "==================================================\n",
       "Afirmó que José Antonio Meade propone otorgar becas a estudiantes indígenas , créditos a la palabra para las mujeres y la apertura de Casas de Día para adultos mayores .\n",
-      "C1\tC2\tE1\tE2\tE3\tE4\tV1\n",
-      "0.002\t0.031\t0.000\t0.000\t0.009\t0.001\t0.000\n",
       "\n",
+      "Categorías inferidas: C2\n",
+      "==================================================\n",
+      "\n",
+      "==================================================\n",
       "\" No podemos actuar con irresponsabilidad , si los contratistas , los que tienen los contratos quieren invertir y hacerse cargo , que no le cueste al erario público , a la hacienda pública , adelante , estamos nosotros dispuesto a concesionarlo \" , expuso al comentar que tiene una alternativa que es construir dos pistas en el aeropuerto militar de Santa Lucía , sin cerrar el actual aeropuerto .\n",
-      "C1\tC2\tE1\tE2\tE3\tE4\tV1\n",
-      "0.000\t1.000\t0.000\t0.020\t0.007\t0.001\t0.000\n",
       "\n",
+      "Categorías inferidas: C2\n",
+      "==================================================\n",
+      "\n",
+      "==================================================\n",
       "\" Es decir que tengan una concesión y que les vaya muy bien , Slim ha dicho de que es un buen negocio , pues adelante , que participe en la licitación , vamos a convocar a técnicos de inobjetable honestidad , de constructores expertos y que expertos independientes hagan la propuesta para la licitación y que se les pueda presentar esto como una opción como una alternativa \" , dijo .\n",
-      "C1\tC2\tE1\tE2\tE3\tE4\tV1\n",
-      "0.971\t0.000\t0.000\t0.002\t0.515\t0.000\t0.042\n",
       "\n",
+      "Categorías inferidas: C2, E3\n",
+      "==================================================\n",
+      "\n",
+      "==================================================\n",
       "Recordó que fue director del Instituto Nacional Indigenista en Tabasco , hace 40 años y ahí aprendió a trabajar por la gente humilde y pobre , pero estos corruptos neoliberales acabaron con el INI , ya no hay los centros coordinadores indigenistas que habían antes .\n",
-      "C1\tC2\tE1\tE2\tE3\tE4\tV1\n",
-      "0.841\t0.004\t0.005\t0.000\t0.080\t0.000\t0.021\n",
       "\n",
+      "Categorías inferidas: C1, E1, E3\n",
+      "==================================================\n",
+      "\n",
+      "==================================================\n",
       "Eruviel Ávila estuvo acompañado del dirigente estatal del PRI , Ernesto Nemer Álvarez , quien reconoció la fortaleza de las mujeres y hombres priistas de Ecatepec , quienes darán el triunfo al candidato de la coalición Todos por México .\n",
-      "C1\tC2\tE1\tE2\tE3\tE4\tV1\n",
-      "0.000\t0.000\t0.002\t0.000\t0.078\t0.000\t0.006\n",
       "\n",
+      "Categorías inferidas: E3, V1\n",
+      "==================================================\n",
+      "\n",
+      "==================================================\n",
       "Yo quiero ser el Presidente de México , para lograr ese cambio profundo y esa transformación que hoy , nuestro país necesita .\n",
-      "C1\tC2\tE1\tE2\tE3\tE4\tV1\n",
-      "0.111\t0.001\t0.003\t0.000\t0.537\t0.000\t0.003\n",
       "\n",
+      "Categorías inferidas: C2, E3, V1\n",
+      "==================================================\n",
+      "\n",
+      "==================================================\n",
       "Ricardo Anaya exhortó a sus colaboradores a trabajar sin descanso durante los próximos tres meses .\n",
-      "C1\tC2\tE1\tE2\tE3\tE4\tV1\n",
-      "0.000\t0.815\t0.016\t0.000\t0.000\t0.018\t0.000\n",
       "\n",
+      "Categorías inferidas: NA\n",
+      "==================================================\n",
+      "\n",
+      "==================================================\n",
       "Adelantó que llamará a participar a muchos jóvenes en el nuevo gobierno democrático y puso como ejemplo los jóvenes que participarán : como secretario de Desarrollo Urbano será Román Meyer ; secretaria de Trabajo , María Luisa Alcalde , quien le tocará coordinar el programa \" Jóvenes construyendo el futuro \" .\n",
-      "C1\tC2\tE1\tE2\tE3\tE4\tV1\n",
-      "0.979\t0.000\t0.932\t0.000\t0.863\t0.000\t0.002\n",
       "\n",
+      "Categorías inferidas: C1, E3\n",
+      "==================================================\n",
+      "\n",
+      "==================================================\n",
       "Finalmente , reiteró que la Coalición que encabeza quiere un gobierno con muchísimas mujeres no sólo en el gabinete , sino en todos los espacios públicos y de decisión .\n",
-      "C1\tC2\tE1\tE2\tE3\tE4\tV1\n",
-      "0.994\t0.976\t0.001\t0.032\t0.005\t0.000\t0.000\n",
       "\n",
+      "Categorías inferidas: C1, C2, E2\n",
+      "==================================================\n",
+      "\n",
+      "==================================================\n",
       "Señaló que se tiene que votar por la transformación de México , no se trata de votar por un candidato o por un partido , lo más importante es votar por el programa de transformación del país .\n",
-      "C1\tC2\tE1\tE2\tE3\tE4\tV1\n",
-      "0.118\t0.109\t0.020\t0.001\t0.927\t0.000\t0.000\n",
       "\n",
+      "Categorías inferidas: E3, V1\n",
+      "==================================================\n",
+      "\n",
+      "==================================================\n",
       "Aprovechándose del referido financiamiento ilegal , y de manera opaca , dirigentes y militantes de Morena distribuyen dinero en efectivo a votantes , incluyendo a una mayoría que no está en el padrón de damnificados , a fin de coaccionar el voto a favor de López Obrador , acusó la Diputada Mariana Benítez , también representante del PRI ante el INE .\n",
-      "C1\tC2\tE1\tE2\tE3\tE4\tV1\n",
-      "0.199\t0.000\t0.080\t0.000\t0.029\t0.000\t0.000\n",
       "\n",
+      "Categorías inferidas: E1\n",
+      "==================================================\n",
+      "\n",
+      "==================================================\n",
       "Por la tarde , Andrés Manuel López Obrador visitará Chetumal , Quintana Roo , donde dijo que podrá cumplir con sus compromisos , porque terminará con la corrupción y los privilegios , habrá presupuesto , pero no endeudará al país , ni habrá aumentos de impuestos , ni gasolinazos .\n",
-      "C1\tC2\tE1\tE2\tE3\tE4\tV1\n",
-      "0.521\t0.001\t0.000\t0.002\t0.013\t0.000\t0.001\n",
       "\n",
+      "Categorías inferidas: C1, C2\n",
+      "==================================================\n",
+      "\n",
+      "==================================================\n",
       "Arturo Zamora compromete apoyo de priistas para llevar a su candidato presidencial al triunfo .\n",
-      "C1\tC2\tE1\tE2\tE3\tE4\tV1\n",
-      "0.000\t0.150\t0.000\t0.000\t0.013\t0.000\t0.000\n",
+      "\n",
+      "Categorías inferidas: NA\n",
+      "==================================================\n",
       "\n"
      ]
     }
@@ -411,17 +506,22 @@
    "source": [
     "with torch.no_grad():\n",
     "    for i, x in enumerate(X_test):\n",
+    "        print('='*50)\n",
     "        print(' '.join(sentences[i]))\n",
     "#         print_ix_sentence(x)\n",
     "        pred = persuasion(x)\n",
+    "        print()\n",
     "        print_ix_cat(pred)\n",
+    "        print('='*50)\n",
     "        print()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": []
   }
