Exporto embeddings en formato csv para visualizarlos en https://projector.tensorflow.org/

--- a/ProyectoFinal/Embeddings/test_model.ipynb
+++ b/ProyectoFinal/Embeddings/test_model.ipynb
@@ -9,8 +9,7 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
-    "# import torchvision\n",
-    "# from torch.utils.tensorboard import SummaryWriter"
+    "import pandas as pd"
    ]
   },
   {
@@ -298,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +399,7 @@
       "<BOS> andrés manuel lópez obrador\n",
       "\n",
       "- Enunciado generado:\n",
-      "<BOS> andrés manuel lópez obrador llamó a medios de campaña en <UNK> , los jóvenes , en el ine ciro días estado de desarrollo y encabezará zepeda https: mitin para desarrollar el movimiento <UNK> . <EOS>\n",
+      "<BOS> andrés manuel lópez obrador anunció que abarrotaron de acceso gutiérrez , no quiere ver las pensiones , debido caminando fraude electoral está por el primer oposición de escasos recursos sus puntos de ricardo monreal \" , afirmó meade , con este encuentro en tamaulipas . <EOS>\n",
       "\n",
       "\n",
       "===================================================\n",
@@ -408,7 +407,7 @@
       "<BOS> lópez obrador\n",
       "\n",
       "- Enunciado generado:\n",
-      "<BOS> lópez obrador respondió para <UNK> la familia . <EOS>\n",
+      "<BOS> lópez obrador destacó que en su derecho a nivel nacional y muchas veces garantizado a quienes actos . <EOS>\n",
       "\n",
       "\n",
       "===================================================\n",
@@ -416,7 +415,7 @@
       "<BOS> ricardo anaya\n",
       "\n",
       "- Enunciado generado:\n",
-      "<BOS> ricardo anaya dijo que se han dedicado a lo que mueven el problema de bienes de la asamblea de la semilla histórica . <EOS>\n",
+      "<BOS> ricardo anaya destacó que se <UNK> para hacer un programa de calidad para las elecciones . <EOS>\n",
       "\n",
       "\n",
       "===================================================\n",
@@ -424,7 +423,7 @@
       "<BOS> anaya\n",
       "\n",
       "- Enunciado generado:\n",
-      "<BOS> anaya no a la presidencia de méxico contará a la entidad , el abanderado de los partidos revolucionario institucional ( pri ) , verde ecologista de méxico ( pvem ) y nueva alianza anunció que llega ahora no se necesitan por qué se dieron los sueldos de los estados\n",
+      "<BOS> anaya está abierto muy bravo . <EOS>\n",
       "\n",
       "\n",
       "===================================================\n",
@@ -432,7 +431,7 @@
       "<BOS> josé antonio meade\n",
       "\n",
       "- Enunciado generado:\n",
-      "<BOS> josé antonio meade invitó a generar profunda al populismo de eu y a los productores del país , contrato y jiutepec , tabasco , ahí se apoyará a niños del presupuesto público para aumentar fundamentales . <EOS>\n",
+      "<BOS> josé antonio meade puntualizó que se generarán jóvenes en la materia y para convertir es que se utilizan el primero del tribunal electoral de un mes sin una encuesta , las que no han cargos solidario para enfrentar el tráfico a empresarios \" . <EOS>\n",
       "\n",
       "\n",
       "===================================================\n",
@@ -440,7 +439,7 @@
       "<BOS> meade\n",
       "\n",
       "- Enunciado generado:\n",
-      "<BOS> meade subrayó que hoy <UNK> a través del país : mante quién es como el palacio municipal gonzález . <EOS>\n",
+      "<BOS> meade asumió la próxima educativa , el aspirante presidencial afirmó que antes el presupuesto de calidad y el compromiso de trabajo y apoyos . <EOS>\n",
       "\n",
       "\n",
       "===================================================\n",
@@ -448,7 +447,7 @@
       "<BOS> el candidato\n",
       "\n",
       "- Enunciado generado:\n",
-      "<BOS> el candidato la coalición todos por méxico a la presidencia de méxico manifestó que en su caso de acuerdo como capital en la elección , el pri es fundamental que se <UNK> un desplegado . <EOS>\n",
+      "<BOS> el candidato de la coalición todos por méxico dijo que no los siguientes ministros del pueblo y apoyar al público que la necesita de lo que viene de todo , el secretario de los programas de ejidatarios al medio ambiente tercio de tiempo completo con su valor , ahora resulta\n",
       "\n",
       "\n",
       "===================================================\n",
@@ -456,7 +455,7 @@
       "<BOS> \"\n",
       "\n",
       "- Enunciado generado:\n",
-      "<BOS> \" a los mexicanos es agropecuaria de legalidad . <EOS>\n",
+      "<BOS> \" no importa al productor , sino hasta una intención del cambio \" , indicó . <EOS>\n",
       "\n",
       "\n"
      ]
@@ -475,6 +474,67 @@
     "        print_ix_sentence(gen_sentence)\n",
     "        print('\\n')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Guardo los embeddings en un archivo csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.0578452 ,  0.3161479 , -0.5756407 , ...,  1.5266542 ,\n",
+       "         1.2428318 ,  0.19398741],\n",
+       "       [-2.112738  ,  0.60530764, -1.0337901 , ...,  1.2791759 ,\n",
+       "         1.0066867 , -0.4245396 ],\n",
+       "       [ 0.07019642, -0.3957354 ,  1.0859576 , ...,  0.77084315,\n",
+       "        -0.9025867 , -0.08432264],\n",
+       "       ...,\n",
+       "       [ 1.088267  , -0.25628954,  0.8836263 , ..., -0.14433354,\n",
+       "        -0.63452756, -0.6571088 ],\n",
+       "       [-1.1417605 ,  1.2172513 ,  0.1527519 , ..., -0.81698406,\n",
+       "        -1.0173255 ,  0.7318495 ],\n",
+       "       [ 0.5671076 , -0.93567675, -0.49270746, ..., -0.51932335,\n",
+       "        -0.04244279, -0.68007064]], dtype=float32)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "embeddings = model.embedding.weight.detach().to('cpu').numpy()\n",
+    "embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.DataFrame(embeddings).to_csv(\n",
+    "    'embeddings.csv', \n",
+    "    sep='\\t', \n",
+    "    header=False,\n",
+    "    index=False\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
